refactor(dotAI): PR review comments fixes